--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-streamlit
-numpy
-pandas
-scikit-image
-scipy
-opencv-python
-pillow
-matplotlib
-tqdm
+# Minimal, reproducible dependency set for the exported app
+# Use the headless OpenCV variant for servers/Streamlit Cloud
+streamlit>=1.24
+numpy>=1.23
+pandas>=1.5
+scikit-image>=0.20
+scipy>=1.10
+opencv-python-headless>=4.7
+pillow>=9.5
+matplotlib>=3.7
+tqdm>=4.65
